k8s/03-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: banking
spec:
  serviceName: postgres-db
  replicas: 2
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      nodeSelector:
        type: high-memory

      tolerations:
      - key: "database-only"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - postgres
            topologyKey: "kubernetes.io/hostname"

      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
