k8s/06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: banking
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - port: 5432
