k8s/10-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: banking-network-policy
  namespace: banking
spec:
  podSelector: {} 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx 
    ports:
    - protocol: TCP
      port: 80
  
  - from:
    - podSelector:
        matchLabels:
          app: dashboard
    ports:
    - protocol: TCP
      port: 3000

  - from:
    - podSelector:
        matchLabels:
          app: banking-api
    ports:
    - protocol: TCP
      port: 5432

  - from:
    - namespaceSelector: {} 
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

  - ports:
    - protocol: TCP
      port: 9100

  - from:
    - ipBlock:
        cidr: 0.0.0.0/0 
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 80
